--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,13 @@ html, body {
     height: 100%;
     width: 100%;
     overflow: hidden;
+    background-color: #171717; /* neutral-900 */
 }
 
 #root {
     height: 100%;
     width: 100%;
+    background-color: #171717; /* neutral-900 */
 }
 
 /* 在 CPU 高负载或用户偏好减少动画时禁用过渡 */
